# misc

./: .gitignore  go.mod  go.sum
compose/fullroute/: Dockerfile-client  Dockerfile-server  Dockerfile-server-gobgp  Dockerfile-server-rusty  README.md  docker-compose-gobgp.yml  docker-compose-rusty.yml  docker-compose.yml  rusty.sh  start-client-gobgpd  start-server-gobgpd  start-server-rusty  supervisord.conf
compose/fullroute/bird-watcher/: main.go
compose/fullroute/watcher/: main.go
fullroute-bench/config/: bird-rs.conf  bird.conf  cdk-peer.sh  frr.conf  openbgpd-rs.conf  openbgpd.conf  rustybgpd-rs.conf  rustybgpd.conf
fullroute-bench/frr/: bgpd.conf
fullroute-bench/multi-rib-summary/: Cargo.toml  build.rs
fullroute-bench/multi-rib-summary/src/: main.rs
fullroute-bench/update-watcher/: Cargo.toml  README.md  build.rs
fullroute-bench/update-watcher/src/: main.rs
ghz/: README.md
rib-bench/: README.md  rib.go
