[package]
name = "update-watcher"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "2.33.3"
tonic = "0.4"
bytes = "1.0"
prost = "0.7"
prost-types = "0.7"
prost-derive = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
procfs = "0.9"

[build-dependencies]
tonic-build = "0.4"
