[package]
name = "update-watcher"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "2.33.3"
tonic = "0.5.2"
bytes = "1.0"
prost = "0.8"
prost-types = "0.8"
prost-derive = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
procfs = "0.9"

[build-dependencies]
tonic-build = "0.5.2"
